# go-bazel-examples

./: .gitignore  BUILD.bazel  Makefile  README.md  WORKSPACE  deps.bzl  go.mod  handler.go  interfaces.go
cmd/: BUILD.bazel  main.go  main_test.go
mock/: BUILD.bazel
