load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "cmd_lib",
    srcs = ["main.go"],
    importpath = "github.com/hiro-o918/go-bazel-examples/cmd",
    visibility = ["//visibility:private"],
    deps = ["//:go-bazel-examples"],
)

go_binary(
    name = "cmd",
    embed = [":cmd_lib"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "cmd_test",
    srcs = ["main_test.go"],
    embed = [":cmd_lib"],
    deps = [
        "//mock",
        "@com_github_golang_mock//gomock",
    ],
)
