load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@bazel_gomock//:gomock.bzl", "gomock")

gomock(
    name = "gomock_mock",
    out = "mock.go",
    interfaces = [""],
    library = "//:go-bazel-examples",
    package = "mock",
    source = "//:interfaces.go",
    visibility = ["//visibility:public"],
)

go_library(
    name = "mock",
    srcs = [":gomock_mock"],
    deps = [
        "//:go-bazel-examples",
        "@com_github_golang_mock//gomock"
    ],
    importpath = "github.com/hiro-o918/go-bazel-examples/mock",
    visibility = ["//visibility:public"],
)
